modules/gdscript/tests/scripts/parser/errors/immutable_class_member_no_assignment.gd
let value : float

func test():
	pass
